--- a/SUDS.uplugin
+++ b/SUDS.uplugin
@@ -22,7 +22,7 @@
     {
       "Name": "SUDSEditor",
       "Type": "Editor",
-      "LoadingPhase": "PostEngineInit"
+      "LoadingPhase": "Default"
     }
   ]
 }
