Add test module

--- a/SUDS.uplugin
+++ b/SUDS.uplugin
@@ -23,6 +23,11 @@
       "Name": "SUDSEditor",
       "Type": "Editor",
       "LoadingPhase": "Default"
+    },
+    {
+      "Name": "SUDSTest",
+      "Type": "DeveloperTool",
+      "LoadingPhase": "Default"
     }
   ]
 }
