--- a/SUDS.uplugin
+++ b/SUDS.uplugin
@@ -26,7 +26,7 @@
     },
     {
       "Name": "SUDSTest",
-      "Type": "DeveloperTool",
+      "Type": "Editor",
       "LoadingPhase": "Default"
     }
   ]
