--- a/SUDS.uplugin
+++ b/SUDS.uplugin
@@ -1,4 +1,4 @@
-﻿{
+{
   "FileVersion": 3,
   "Version": 1,
   "VersionName": "1.0",
@@ -26,7 +26,7 @@
     },
     {
       "Name": "SUDSTest",
-      "Type": "DeveloperTool",
+      "Type": "Editor",
       "LoadingPhase": "Default"
     }
   ]
