Adding a Pygments lexer for SUDS format

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ Plugins/*/Intermediate/*
 # Cache files for the editor to use
 DerivedDataCache/*
 
+Extras/PygmentsLexer/build/*
+Extras/PygmentsLexer/dist/*
+Extras/PygmentsLexer/sudslexer.egg-info/*
